--- a/skyfolk/templates/account/login.html
+++ b/skyfolk/templates/account/login.html
@@ -14,7 +14,7 @@
 
 {% block content %}
 
-<!-- <h1>{% trans "Sign In" %}</h1> --> 
+<!-- <h1>{% trans "Sign In" %}</h1> -->
 
 {% if socialaccount.providers  %}
 <p>{% blocktrans with site.name as site_name %}Please sign in with one
@@ -49,7 +49,7 @@ for a {{site_name}} account and sign in below:{% endblocktrans %}</p>
 	  <input class="form-control" type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
 	  {% endif %}
 	  </div>
-	  <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+	  <a class="button secondaryAction" id="losepwd" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
 	  <button id="iniciar_sesion" class="waves-effect waves-light btn" type="submit">{% trans "Sign In" %}</button>
 	  <a id="registrar" type="button" class="waves-effect waves-light btn" onclick="javascript:location.href='{{ signup_url }}'">{% trans "Sign Up" %}</a>
 	</form>
