--- a/skyfolk/templates/about/aboutSkyfolk.html
+++ b/skyfolk/templates/about/aboutSkyfolk.html
@@ -6,10 +6,10 @@
     <link type="text/css" rel="stylesheet" href="{{STATIC_URL}}css/about.css">
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="{{STATIC_URL}}js/materialize.min.js"></script>
-    <link rel="icon" type="image/png" href="{% static "images/favicon.ico" %}" />
+    <link rel="icon" type="image/png" href="{{STATIC_URL}}images/favicon.ico}" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-    <title>Sobre Skyfolk - Conoce un poco mas.</title>
+    <title>Sobre Skyfolk - Conoce un poco mas...</title>
     <script>
     $(document).ready(function(){
       $('.parallax').parallax();
