--- a/skyfolk/templates/about/aboutUs.html
+++ b/skyfolk/templates/about/aboutUs.html
@@ -1,4 +1,4 @@
-{% extends 'aboutskyfolk/aboutSkyfolk.html' %}
+{% extends 'about/aboutSkyfolk.html' %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -18,10 +18,10 @@
         <div class="row">
             <div class="z-depth-2 grey lighten-5 col s12 m12 l4 our-card-1">
                 <div class="name">
-                    <h4 class="grey-text text-lighten-1">Carlos Canicio</h4>
+                    <h4 class="grey-text text-lighten-1">Gabriel Oriol</h4>
                 </div>
                     <div class="info-class">
-                            <span onclick="javascript:location.href='https://www.google.es/maps/place/M%C3%A1laga/@36.7648321,-4.4241892,12z/data=!3m1!4b1!4m2!3m1!1s0xd72f6698d30d151:0x403d278a576e680'"><i class="small material-icons">location_on</i><br>Málaga (España)</span>
+                            <span onclick="javascript:location.href='https://www.google.es/maps/place/Salto,+Uruguay/@-31.3689985,-57.9122047,12z/data=!3m1!4b1!4m2!3m1!1s0x95addd27e22982a9:0x68fc0fac8ca73bc7'"><i class="small material-icons">location_on</i><br>Salto (Uruguay)</span>
                             <br>
                             <p>Programador Django - Base de datos </p>
                     </div>
@@ -54,4 +54,3 @@
 {% endblock %}
 </body>
 </html>
-
