--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -467,6 +467,8 @@ body > .container {
   text-align: center; }
   .user-card .user-avatar .user-bg {
     width: 100%;
+    min-height: 351.567px;
+    max-height: 351.567px;
     border-bottom: 2px solid #1e88e5;
     border-top-left-radius: 0.3rem;
     border-top-right-radius: 0.3rem; }
@@ -498,7 +500,7 @@ body > .container {
   }
 }
 
-/* Posicionamiento default */ 
+/* Posicionamiento default */
 .caja {
   left: 14px;
   position: relative;
@@ -746,7 +748,7 @@ body > .container {
     .video-player .controls > li {
       vertical-align: middle;
       border-left: 0.1em solid #bdbdbd;
-      border-right: 0.1em solid #bdbdbd; 
+      border-right: 0.1em solid #bdbdbd;
       background-color: #fff;
     }
       .video-player .controls > li:first-child {
@@ -1259,9 +1261,9 @@ ul.table > li {
     background-color: transparent;
     position: absolute;
     margin: auto;
-    z-index: 9999;  
+    z-index: 9999;
   }
-  .info-paw .info-nav { 
+  .info-paw .info-nav {
       width: 300px;
       height: 300px;
       border-radius: 100%;
@@ -1438,7 +1440,7 @@ ul.table > li {
     box-shadow: inset 0.2px 0.2px 18px 1px rgba(178,223,219,1);
    }
 
-   /* GRUPOS */ 
+   /* GRUPOS */
 
    .grupos {
     width: 50%;
@@ -2213,7 +2215,7 @@ button:hover {
   height: 100%;
   z-index: 9998;
 }
-/* CHAT EN MENU VERTICAL */ 
+/* CHAT EN MENU VERTICAL */
 .chat_1 {
   position: absolute;
   margin: auto;
