--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -175,7 +175,13 @@
       <div class="col-lg-6 col-md-12 col-sm-12">
         <div class="user-card card">
 
-          <div class="user-avatar"><img src="{{STATIC_URL}}img/backgrounds/5.jpg" class="user-bg"><span class="fa fa-paw fa-lg" title="Acerca de {{ user_profile.username }}"></span>
+          <div class="user-avatar">
+            {% if user_profile.profile.image and user_profile.profile.image|file_exists %}
+            <img src="{{user_profile.profile.backImage.url}}" class="user-bg">
+            {% else %}
+            <img src="{{STATIC_URL}}img/backgrounds/5.jpg" class="user-bg">
+            {% endif %}
+            <span class="fa fa-paw fa-lg" title="Acerca de {{ user_profile.username }}"></span>
             <!--<input type="checkbox" id="button-menu"  />-->
             {% if user.is_authenticated and user.username != user_profile.username and existFriendRequest == True %}  <!-- si es usuario esta visitando un perfil que no es el suyo -->
               <img id = "friend_request_progress" src="{{STATIC_URL}}img/friend_request_progress.png">
