--- a/skyfolk/templates/account/password_change.html
+++ b/skyfolk/templates/account/password_change.html
@@ -8,11 +8,14 @@
 	<h6 class="ch"> Cambia tu contraseña o recupera tu contraseña actual.</h6>
 {% endblock %}
 
+
 {% block cf-form %}
+<div id="contra-2">
     <form method="POST" id="form-changepass" action="{% url 'account_change_password' %}" class="password_change">
         {% csrf_token %}
         {{ form.as_p }}
         <!--<button type="submit" name="action">{% trans "Change Password" %}</button>-->
         <button class="btn btn-info" id="btn" type="submit" name="action">Salvar cambios</button>
     </form>
+	</div>
 {% endblock %}
