--- a/skyfolk/templates/account/search.html
+++ b/skyfolk/templates/account/search.html
@@ -9,7 +9,7 @@
 <a class="btn-floating btn-large waves-effect waves-light grey right"><i class="mdi-social-group-add"></i></a>
 <!-- DIV PARA LA CREACION DEL GRUPO -->
   <div class="crear-grupo">
-    
+
       <div class="row">
         <div class="col s12 m12 l12">
           <div class="card">
@@ -29,7 +29,7 @@
                 </div>
              </div>
             </div>
-            <div class="card-action"> 
+            <div class="card-action">
               <a class="waves-effect waves-light btn white-text text-lighten-3">Crear grupo</a>
               <a class="waves-effect waves-light btn white-text text-lighten-3" id="cerrar_grupo">Cancelar</a>
             </div>
@@ -54,17 +54,16 @@
 <div class="container">
 <div class="row" id="contenedor">
 	{% for item in resultSearch %}
-
 <li>
 <div class="col s4 m3 l4 z-depth-1" id="target">
  <div id="photos" clas="col s4 m3 l4">
    <div class="col s4 m3 l4" id="cabeza">
-   {% if isFriend %}
+   {% if isFriend%}
     <span class="relation grey-text lighten-2"><i class="fa fa-user fa-lg"></i>Amigo</span>
     {% elif item.username == request.user.username %}
     <span class="relation grey-text lighten-2"><i class="fa fa-user fa-lg"></i>Tú<span>
     {% else %}
-    <span class="relation grey-text lighten-2"><i class="fa fa-user fa-lg"></i>Cuenta<span>
+    <span class="relation grey-text lighten-2"><i class="fa fa-user fa-lg"></i>Usuario<span>
     {% endif %}
      <div id="proffile" onclick="location.href='/profile/{{item.username}}'">
 				{% if item.profile.image %}
@@ -91,7 +90,7 @@
   <ul class="controls z-depth-1">
     <li class="fa fa-heart fa-2x"><i></li>
     <li class="fa fa-reply fa-2x"></li>
-    <li class="fa fa-plus fa-2x"></li> 
+    <li class="fa fa-plus fa-2x"></li>
   </ul>
   </div>
   </div>
@@ -99,7 +98,7 @@
   {% endfor %}
 </div>
 </div>
-</div> <!-- Section one --> 
+</div> <!-- Section one -->
 <br><br>
 <div class="divider"></div>
 
