--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -107,7 +107,7 @@
       <li title="Mis Trabajos" class="fontawesome-wrench"></li>
       <a href="index.html"><li title="Inicio" class="fontawesome-dashboard"></li></a>
       <li title="Aportaciones" class="fontawesome-copy"></li>
-      <a href="novedades.html"><li title="Páginas de interés" class="fontawesome-globe"></li></a>
+      <a href="base_news.html"><li title="Páginas de interés" class="fontawesome-globe"></li></a>
     </ul>
       </nav>
       </div>
