--- a/skyfolk/static/css/columnas.css
+++ b/skyfolk/static/css/columnas.css
@@ -1,16 +1,17 @@
 @import url(http://weloveiconfonts.com/api/?family=entypo);
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400);
-@import "//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css";
 @import url(http://fonts.googleapis.com/css?family=Lato);
 [class*="entypo-"]:before {
   font-family: 'entypo', sans-serif;
 }
 
+body {
+    padding: 0;
+    background-color: #e0e0e0;
 }
-
-
-		
-
+.container {
+    min-width: 80%;
+}
 .button {
     background: #DCE0E0;
     position: relative;
@@ -86,4 +87,11 @@
     -ms-transition: all 0.2s ease-in-out;
     -o-transition: all 0.2s ease-in-out;
     transition: all 0.2s ease-in-out;
+}
+
+.preloader-wrapper {
+    left: 47%;
+}
+.loaderOut {
+    opacity: 0;
 }
