--- a/skyfolk/static/css/login-signup.css
+++ b/skyfolk/static/css/login-signup.css
@@ -6,14 +6,14 @@ body {
                        margin: auto;
                        background-size: 100%;
                        max-width: 100%;
-                       max-height: 100%;
-                       min-height: 90vh;
+                       height: 100%;
+                       min-height: 100%;
                        flex-direction: column;
                        background-repeat: no-repeat;
 }
 
 /* Random Background */
-#background_cycler{padding:0;margin:0;width:100%;position:absolute;top:0;left:0;z-index:-1;height:100%;}
+#background_cycler{padding:0;margin:0;width:100%;min-height:100%;position:absolute;top:0;left:0;z-index:-1;height:100%;}
 #background_cycler img{position:absolute;left:0;top:0;width:100%;z-index:1;height: 100%;}
 #background_cycler img.active{z-index:3}
 
