--- a/skyfolk/static/css/widget1.css
+++ b/skyfolk/static/css/widget1.css
@@ -4,8 +4,8 @@
   height: 105px;
   position: fixed;
   background-color: white;
-  right: 0%;
-  top: 87%;
+  right: 1%;
+  top: 80%;
   border-radius: 100%;
   background-position: center;
   background-size: 105px 105px !important;
@@ -25,8 +25,8 @@
   height: 105px;
   position: fixed;
   background-color: white;
-  right: 0%;
-  top: 87%;
+  right: 1%;
+  top: 80%;
   border-radius: 100%;
   background-position:center;
   background-size: 105px 105px !important;
@@ -97,16 +97,18 @@
   z-index: 9999;
 }
 
-@media only screen and (min-width: 1200px) and (min-height: 900px) {
+
+@media only screen and (max-width: 960px) and (max-height: 600px) {
   .profile {
-    top: 88%;
+    top: 80%;
   }
 }
-@media only screen and (max-width: 990px) {
+@media only screen and (max-width: 736px) and (max-height: 414px) {
   .profile {
-    top: 88%;
+    display: none;
   }
 }
+
 @media only screen and (max-width: 640px) {
   .profile {
     display: none;
