--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -351,7 +351,7 @@
           </header>
           <div class="status">{{ user_profile.profile.status }}</div>
           <ul class="stats">
-            <li><a href="/friends"><strong>380</strong><span>Seguidores</span></a></li>
+            <li><a href="/friends"><strong>{{ friends_top12|length }}</strong><span>Seguidores</span></a></li>
             <li><a id="likes"><strong>{{n_likes}}</strong><span value="me gusta" onclick="contador()">Me gusta</span></a></li>
             <li><a class='inline' href="#inline_content"><strong>48</strong><span>Fotos</span></a></li>
           </ul>
