--- a/skyfolk/templates/account/amigos.html
+++ b/skyfolk/templates/account/amigos.html
@@ -7,15 +7,11 @@
     <meta name="viewport" content="width=device-width, maximum-scale=3, minimum-scale=0.5">
 </head>
 
-<header> <form method="get" action="/search" id="search">
-  <input name="q" type="text" size="40" placeholder="Buscar..." />
-  </form>
-</header>
-{% block content %}
-<div id="content_profile_cards">
-{% for item in friends_top4 %}
 
-<li><div class="profile_card">
+{% block content %}
+<div class="container">
+{% for item in friends_top4 %}
+<div class="col-sm-5 col-md-5 col-lg-5">
   <div class="header">
     <div class="inner_head">
       <a href="#"><span class="entypo-plus"></span><i>Agregar</i></a>
@@ -29,7 +25,7 @@
     <div class="inner_content">
       <h2 class="nomb" id="nomb">{{ item.user__username }}</h2>
       <span id="desc">
-        <p class="descripcion" id="desc_one">Profunder</p>
+        <p class="descripcion" id="desc_one">Estado defecto</p>
       <p class="descripcion" id="desc_two">Mensaje de texto de prueba </p></span>
 
       <div class="social_links">
@@ -42,152 +38,18 @@
     </div>
 
   </div>
-</div></li>
-{% endfor %}
-
-
 
 </div>
-
+    {% endfor %}
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 
 
-<center><img id="loader-ajax" src="{{STATIC_URL}}img/b.gif"><center>
-<button id="button-more-friends" type="button" onclick="AJAX_loadFriends()">More!</button>
+<center><img id="loader-ajax" src="{{STATIC_URL}}img/b.gif"></center>
 
-
-<!--
-<div class="profile_card">
-  <div class="header">
-    <div class="inner_head">
-      <a href="#"><span class="entypo-plus"></span><i>Agregar</i></a>
-      <a href="#"><span class="entypo-chat"></span><i>Chat</i></a>
-      <a href="#"><span class="entypo-star"></span><i>Favorito</i></a>
-      <a href="#"><span class="entypo-heart-empty"></span><i>Me gusta</i></a>
-    </div>
-  </div>
-  <div class="perfil">
-    <div class="foto_perfil"></div>
-    <div class="inner_content">
-      <h2 class="nomb" id="nomb">Adrián Carayol</h2>
-      <span id="desc">
-        <p class="descripcion" id="desc_one">Profunder</p>
-      <p class="descripcion" id="desc_two">Mensaje de texto de prueba </p></span>
-
-      <div class="social_links">
-        <ul>
-          <li ><a id="Enviar..." href="/" class="button"><span class="entypo-forward"></span></a></li>
-          <li ><a id="Notificar..." href="/"  class="button"><span class="entypo-bell"></span></a></li> 
-          <li ><a id="Bloquear..." href="/"  class="button"><span class="entypo-block"></span></a></li> 
-        </ul>
-      </div>
-    </div>
-
-  </div>
+<center><button id="button-more-friends" type="button" onclick="AJAX_loadFriends()">More!</button></center>
 </div>
 
-
-
-
-
-
-
-<div class="profile_card">
-  <div class="header">
-    <div class="inner_head">
-      <a href="#"><span class="entypo-plus"></span><i>Agregar</i></a>
-      <a href="#"><span class="entypo-chat"></span><i>Chat</i></a>
-      <a href="#"><span class="entypo-star"></span><i>Favorito</i></a>
-      <a href="#"><span class="entypo-heart-empty"></span><i>Me gusta</i></a>
-    </div>
-  </div>
-  <div class="perfil">
-    <div class="foto_perfil"></div>
-    <div class="inner_content">
-      <h2 class="nomb" id="nomb">Nestor</h2>
-      <span id="desc">
-        <p class="descripcion" id="desc_one">Profunder</p>
-      <p class="descripcion" id="desc_two">Mensaje de texto de prueba </p></span>
-
-      <div class="social_links">
-        <ul>
-          <li ><a id="Enviar..." href="/" class="button"><span class="entypo-forward"></span></a></li>
-          <li ><a id="Notificar..." href="/"  class="button"><span class="entypo-bell"></span></a></li> 
-          <li ><a id="Bloquear..." href="/"  class="button"><span class="entypo-block"></span></a></li> 
-        </ul>
-      </div>
-    </div>
-
-  </div>
-</div>
-
-
-
-
-
-<div class="profile_card">
-  <div class="header">
-    <div class="inner_head">
-      <a href="#"><span class="entypo-plus"></span><i>Agregar</i></a>
-      <a href="#"><span class="entypo-chat"></span><i>Chat</i></a>
-      <a href="#"><span class="entypo-star"></span><i>Favorito</i></a>
-      <a href="#"><span class="entypo-heart-empty"></span><i>Me gusta</i></a>
-    </div>
-  </div>
-  <div class="perfil">
-    <div class="foto_perfil"></div>
-    <div class="inner_content">
-      <h2 class="nomb" id="nomb">Carlos Canicio</h2>
-      <span id="desc">
-        <p class="descripcion" id="desc_one">Profunder</p>
-      <p class="descripcion" id="desc_two">Mensaje de texto de prueba </p></span>
-
-      <div class="social_links">
-        <ul>
-          <li ><a id="Enviar..." href="/" class="button"><span class="entypo-forward"></span></a></li>
-          <li ><a id="Notificar..." href="/"  class="button"><span class="entypo-bell"></span></a></li> 
-          <li ><a id="Bloquear..." href="/"  class="button"><span class="entypo-block"></span></a></li> 
-        </ul>
-      </div>
-    </div>
-
-  </div>
-</div>
-
-
-
-
-<div class="profile_card">
-  <div class="header">
-    <div class="inner_head">
-      <a href="#"><span class="entypo-plus"></span><i>Agregar</i></a>
-      <a href="#"><span class="entypo-chat"></span><i>Chat</i></a>
-      <a href="#"><span class="entypo-star"></span><i>Favorito</i></a>
-      <a href="#"><span class="entypo-heart-empty"></span><i>Me gusta</i></a>
-    </div>
-  </div>
-  <div class="perfil">
-    <div class="foto_perfil"></div>
-    <div class="inner_content">
-      <h2 class="nomb" id="nomb">Pablo Rossiñol</h2>
-      <span id="desc">
-        <p class="descripcion" id="desc_one">Profunder</p>
-      <p class="descripcion" id="desc_two">Mensaje de texto de prueba </p></span>
-
-      <div class="social_links">
-        <ul>
-          <li ><a id="Enviar..." href="/" class="button"><span class="entypo-forward"></span></a></li>
-          <li ><a id="Notificar..." href="/"  class="button"><span class="entypo-bell"></span></a></li> 
-          <li ><a id="Bloquear..." href="/"  class="button"><span class="entypo-block"></span></a></li> 
-        </ul>
-      </div>
-    </div>
-
-  </div>
-</div>
-
--->
 
 {% endblock %}
-</center></center>
+</html>
