--- a/skyfolk/templates/account/amigos.html
+++ b/skyfolk/templates/account/amigos.html
@@ -1,46 +1,33 @@
 {% extends 'account/base_interface.html' %}
 <html>
-<head>
-    <link type="text/css" rel="stylesheet" href="{{STATIC_URL}}css/amigos.css"/>
-    <script src="{{STATIC_URL}}js/friends.js"></script>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="width=device-width, maximum-scale=3, minimum-scale=0.5">
-</head>
-
-
 {% block content %}
+
 <div class="container">
+<div class="col-lg-12">
 {% for item in friends_top4 %}
-<div class="col-sm-5 col-md-5 col-lg-5">
-  <div class="header">
-    <div class="inner_head">
-      <a href="#"><span class="entypo-plus"></span><i>Agregar</i></a>
-      <a href="#"><span class="entypo-chat"></span><i>Chat</i></a>
-      <a href="#"><span class="entypo-star"></span><i>Favorito</i></a>
-      <a href="#"><span class="entypo-heart-empty"></span><i>Me gusta</i></a>
+<div class="col-lg-3 col-md-6 col-sm-8">
+    <div class="personal-card">
+        <div class="col-lg-12">
+            <div class="header">
+            <img class="back-profile-user" src="{{ STATIC_URL }}img/6.jpg">
+                <i class="fa fa-user fa-2x like-him">
+                </i>
+                <div class="bg-user">
+                <img class="profile-user-bg" src="{{ STATIC_URL }}img/1.jpg">
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-12">
+            <div class="name-friend">
+            <p>{{ item.user__username }}</p><br>
+                <p>{{ item.user__first_name }}</p>
+            </div>
+
+        </div>
     </div>
-  </div>
-  <div class="perfil">
-    <div class="foto_perfil"></div>
-    <div class="inner_content">
-      <h2 class="nomb" id="nomb">{{ item.user__username }}</h2>
-      <span id="desc">
-        <p class="descripcion" id="desc_one">Estado defecto</p>
-      <p class="descripcion" id="desc_two">Mensaje de texto de prueba </p></span>
-
-      <div class="social_links">
-        <ul>
-          <li ><a id="Enviar..." href="/" class="button"><span class="entypo-forward"></span></a></li>
-          <li ><a id="Notificar..." href="/"  class="button"><span class="entypo-bell"></span></a></li> 
-          <li ><a id="Bloquear..." href="/"  class="button"><span class="entypo-block"></span></a></li> 
-        </ul>
-      </div>
-    </div>
-
-  </div>
-
 </div>
-    {% endfor %}
+{% endfor %}
+    </div>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 
@@ -48,8 +35,7 @@
 <center><img id="loader-ajax" src="{{STATIC_URL}}img/b.gif"></center>
 
 <center><button id="button-more-friends" type="button" onclick="AJAX_loadFriends()">More!</button></center>
+
 </div>
-
-
 {% endblock %}
 </html>
