--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -74,7 +74,7 @@
     <div class="footer_base">
       <div class="col s3 m3 l12footer-copyright blue-text text-lighten-5">
             <div class="container">
-            <a class="blue-text text-lighten-5 left">Â© 2015 Copyright</a>
+            <a class="blue-text text-lighten-5 left">© 2015 Copyright</a>
             <a class="blue-text text-lighten-5 right" href="#!">More Links</a>
             <a id="about" class="blue-text text-lighten-5" href="/about/home">Sobre Skyfolk</a>
             <a id="Blog" class="blue-text text-lighten-5" href="/blog">Blog</a>
