--- a/skyfolk/templates/account/amigos.html
+++ b/skyfolk/templates/account/amigos.html
@@ -1,4 +1,5 @@
 {% extends 'account/base_interface.html' %}
+{% load app_filters %}
 <html>
 {% block content %}
 
@@ -9,11 +10,19 @@
     <div class="personal-card">
         <div class="col-lg-12">
             <div class="header">
-            <img class="back-profile-user" src="{{ STATIC_URL }}img/6.jpg">
+               {% if item.user__profile__image and item.user__profile__image|file_exists %}
+                   <img class="back-profile-user" src="{{MEDIA_URL}}{{item.user__profile__image}}">
+                   {% else %}
+                   <img class="back-profile-user" src="{{ STATIC_URL }}img/6.jpg">
+                {% endif %}
                 <i class="fa fa-user fa-2x like-him">
                 </i>
                 <div class="bg-user">
-                <img class="profile-user-bg" src="{{ STATIC_URL }}img/1.jpg">
+                    {% if item.user__profile__backImage and item.user__profile__backImage|file_exists %}
+                        <img class="profile-user-bg" src="{{ MEDIA_URL }}{{ item.user__profile__backImage }}">
+                    {% else %}
+                        <img class="profile-user-bg" src="{{ STATIC_URL }}img/7.jpg">
+                    {% endif %}
                 </div>
             </div>
         </div>
