--- a/skyfolk/static/css/configuracion.css
+++ b/skyfolk/static/css/configuracion.css
@@ -1,16 +1,10 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:300,400);
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:300);
-
-body {
-  padding: 0;
-  background-color: #fff;
-  max-width: 100%;
-}
-
 hgroup {
   margin-bottom: 70px;
   position: relative;
 }
+
 span {
   position: relative;
   top: 40px;
@@ -37,48 +31,48 @@ h6 {
 }
 
 /* Menu vertical */
-aside {
-    margin-left: 20px;
-    background-color: #FAFAFA;
-    height: 420px;
-    width: 240px;
-    border-radius:  7px;
-    -webkit-box-shadow: 2px 2px 7px 0px #efefef;
-    -moz-box-shadow:    2px 2px 7px 0px #efefef;
-    box-shadow:         2px 2px 7px 0px #efefef;
-    margin-top: 70px;
+.sidebar {
+  background-color: #fff;
+  position: relative;
+  height: 420px;
+  width: 100%;
+  border-radius:  7px;
+  -webkit-box-shadow: 2px 2px 7px 0px #efefef;
+  -moz-box-shadow:    2px 2px 7px 0px #efefef;
+  box-shadow:         2px 2px 7px 0px #efefef;
+  margin-top: 70px;
 }
-aside nav {
+.sidebar nav {
   list-style-type:  none;
   height: 100%;
   font-weight: 100;
   font-family: 'Open Sans', sans-serif;
 
 }
-aside nav li {
+.sidebar nav li {
   color:  #000;
   margin-top: 20px;
   padding:  10px 10px;
   border-bottom:  2px solid #fff;
-  background-color:  #fafafa;
+  background-color:  #fff;
   border-left: 5px solid rgba(44,44,44,0.854);
   border-radius:  3px;
   transition:  all .2s ease-in;
   cursor:  pointer;
 }
-aside nav li:hover {
+.sidebar nav li:hover {
   color: #1976d2;
   background-color:  #E4E4E4;
   border-left: 7px solid #1976d2;
 }
-aside nav li i {
+.sidebar nav li i {
   float: left;
   margin-left: 10px;
   margin-right: 10px;
   font-style: normal;
   transition:  all .3s ease-in;
 }
-aside nav li:hover > i {
+.sidebar nav li:hover > i {
   margin-left: 40px;
 }
 .wr {
@@ -89,7 +83,7 @@ aside nav li:hover > i {
   left: 27%;
 }
 .actual, #form-changepass input{
-  width: 200px;
+  width: 20%;
   position: relative;
   margin: auto;
   padding: 5px 7px;
@@ -99,7 +93,6 @@ aside nav li:hover > i {
   transition: all .3s linear;
   -webkit-transition: all .3s linear;
   -moz-transition: all .3s;
-  top: 0px;
   margin-left: 20px;
   margin-right: 0px;
 }
@@ -182,19 +175,17 @@ label[for="id_password2"] {
   top: 25px;
 }
 #contra {
-  position:  absolute;
-  margin-right: auto;
-  margin-left: auto;
-  top: 200px;
-  right: 0;
-  left: 0;
-  width:  680px;
-  max-height: 66%;
-  border-radius: 7px;
-  -webkit-box-shadow: 2px 2px 7px 0px #efefef;
-  -moz-box-shadow:    2px 2px 7px 0px #efefef;
-  box-shadow:         2px 2px 7px 0px #efefef;
-  border: 1px solid #e0e0e0;
+      position:  relative;
+      margin-top: 5%;
+    margin-left: 20%;
+      width:  100%;
+    background-color: #fff;
+      height: 600px;
+      border-radius: 7px;
+      -webkit-box-shadow: 2px 2px 7px 0px #efefef;
+      -moz-box-shadow:    2px 2px 7px 0px #efefef;
+      box-shadow:         2px 2px 7px 0px #efefef;
+      border: 1px solid #e0e0e0;
 }
 
 #contra li {
@@ -314,7 +305,7 @@ hgroup {
   clear:both;
 }
 .profilex {
-   width: 620px;
+   width: 90%;
     border-bottom-left-radius: 70px;
     border-top-left-radius: 70px;
     border-bottom-right-radius: 7px;
@@ -326,32 +317,14 @@ hgroup {
     margin-top: 12px;
     position: relative;
 }
-
-@media (min-width: 1200px) {
-  #contra {
-    height: 1320px;
-  }
+.profilex .img-circle {
+  border-radius: 100%;
 }
 
-@media (min-width: 768px) and (max-width: 979px) {
-  #contra {
-    height: 1500px;
-  }
-}
+/* MEDIAS */
 
-@media only screen and (min-width: 641px) and (max-width: 959px) {
-  #contra {
-    left: 40%;
-  }
-}
-
-@media only screen and (min-width: 959px) and (max-width: 1200px) {
-  #contra {
-    left: 20%;
-  }
-}
-@media only screen and (max-width: 800px) {
-  #contra {
-    left: 50%;
-  }
+@media only screen and (max-width:632px) {
+    hgroup {
+        display: none;
+    }
 }
