--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -3,21 +3,25 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300);
 @import url(http://fonts.googleapis.com/css?family=Montserrat+Alternates);
 
-body {
-    -webkit-transition: all .1s linear;
-    -moz-transition: all .1s linear;
-    transition: all .1s linear;
-}
-
-html {
-   font-family: 'Open Sans', sans-serif;
-   min-height:100%;
-}
 
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box; }
+
+html, body {
+  background: #fafafa;
+  color: #46494c;
+  height: 100%;
+  padding: 0;
+  margin: auto;
+  min-width: 80%;
+  max-width:100%;
+      -webkit-transition: all .1s linear;
+    -moz-transition: all .1s linear;
+    transition: all .1s linear;
+}
+
 .activex {
   color: red;
 }
@@ -1058,22 +1062,6 @@ body > .container {
 
 .middle {
   vertical-align: middle; }
-
-* {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box; }
-
-html, body {
-  font: 0.9em/1.2 "Proxima Nova", "Helvetica Neue", Arial;
-  background: #eeeeee;
-  color: #46494c;
-  height: 100%;
-  padding: 0;
-  margin: auto;
-  min-width: 80%;
-  max-width:100%;
-}
 
 a {
   cursor: pointer;
