--- a/skyfolk/static/css/login-signup.css
+++ b/skyfolk/static/css/login-signup.css
@@ -7,14 +7,13 @@ body {
                        background-size: 100%;
                        max-width: 100%;
                        height: 100%;
-                       min-height: 100%;
                        flex-direction: column;
                        background-repeat: no-repeat;
 }
 
 /* Random Background */
-#background_cycler{padding:0;margin:0;width:100%;min-height:100%;position:absolute;top:0;left:0;z-index:-1;height:100%;}
-#background_cycler img{position:absolute;left:0;top:0;width:100%;z-index:1;height: 100%;}
+#background_cycler{padding:0;margin:0;width:100%;position:absolute;top:0;left:0;z-index:-1;min-height:100%;}
+#background_cycler img{position:absolute;left:0;top:0;width:100%; height: 100%; z-index:1;}
 #background_cycler img.active{z-index:3}
 
 /* LOGO */
@@ -278,13 +277,6 @@ form {
     display: none;
   }
  }
-
-@media screen and (max-height: 500px) {
-  #background_cycler {
-    height: 1000px;
-  }
-}
-
 
 .form-3 .form-group{
   height: 56%;
